[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/components/system/desktop.gd" type="Script" id=1]
[ext_resource path="res://sources/themes/font-sizes/rbk-r-12.tres" type="DynamicFont" id=2]
[ext_resource path="res://sources/themes/panel/light.tres" type="StyleBox" id=3]
[ext_resource path="res://sources/themes/light_theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.482353, 0.509804, 0.698039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hide"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="desktop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.21, 0.55, 0.99, 1 )

[node name="menu" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -136.0
margin_right = 161.0
margin_bottom = -43.0

[node name="margin" type="MarginContainer" parent="menu"]
margin_right = 153.0
margin_bottom = 93.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vb" type="VBoxContainer" parent="menu/margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 148.0
margin_bottom = 88.0
alignment = 1

[node name="reload_btn" type="Button" parent="menu/margin/vb"]
margin_right = 143.0
margin_bottom = 25.0
text = "Перезагрузить"
align = 0

[node name="off_btn" type="Button" parent="menu/margin/vb"]
margin_top = 29.0
margin_right = 143.0
margin_bottom = 54.0
text = "Выключить"
align = 0

[node name="ch_user_btn" type="Button" parent="menu/margin/vb"]
margin_top = 58.0
margin_right = 143.0
margin_bottom = 83.0
text = "Выйти"
align = 0

[node name="margin_taskbar" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
rect_min_size = Vector2( 0, 35 )

[node name="tb" type="PanelContainer" parent="margin_taskbar"]
margin_right = 1024.0
margin_bottom = 35.0
custom_styles/panel = ExtResource( 3 )

[node name="margin" type="MarginContainer" parent="margin_taskbar/tb"]
margin_right = 1024.0
margin_bottom = 35.0

[node name="hb" type="HBoxContainer" parent="margin_taskbar/tb/margin"]
margin_right = 1024.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="m_menu" type="MarginContainer" parent="margin_taskbar/tb/margin/hb"]
margin_right = 70.0
margin_bottom = 35.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="menu" type="Button" parent="margin_taskbar/tb/margin/hb/m_menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
toggle_mode = true
text = "Меню"

[node name="HBoxContainer" type="HBoxContainer" parent="margin_taskbar/tb/margin/hb"]
margin_left = 74.0
margin_right = 950.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="DateTime" type="Label" parent="margin_taskbar/tb/margin/hb"]
margin_left = 954.0
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = ExtResource( 2 )
text = "20:18
14.07.2022"
align = 1
valign = 1
autowrap = true

[node name="anim_menu" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hide = SubResource( 4 )
anims/show = SubResource( 5 )

[node name="TimeTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="menu/margin/vb/reload_btn" to="." method="_on_reload_btn_pressed"]
[connection signal="pressed" from="menu/margin/vb/off_btn" to="." method="_on_off_btn_pressed"]
[connection signal="pressed" from="menu/margin/vb/ch_user_btn" to="." method="_on_ch_user_btn_pressed"]
[connection signal="toggled" from="margin_taskbar/tb/margin/hb/m_menu/menu" to="." method="_on_menu_toggled"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_TimeTimer_timeout"]
